# explorer

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/superpowers/plans/: 2026-05-26-test-explorer.md
docs/superpowers/specs/: 2026-05-26-test-explorer-design.md
explorer/: __init__.py  __main__.py
explorer/cli/: status.py  tail.py
explorer/config/: cli.py  project_yaml.py
explorer/core/: browser_lock.py  bug_store.py  dedup.py  event_bus.py  run_paths.py  scenario_queue.py
explorer/runner/: claude_proc.py  confluence.py  event_log_tailer.py  explorer.py  interview.py  interview_questions.py  planner.py  tabs.py
explorer/runner/prompts/: system_bug_filer.md  system_confluence_writer.md  system_explorer.md  system_planner.md  system_proposer.md
explorer/tui/: app.py  bugs_pane.py  header.py  log_strip.py  plan_screen.py  sessions_pane.py  styles.tcss  tab_picker.py
plans/: maestro-evaluations.yaml  maestro-studio-smoke.yaml
tests/config/: test_cli.py  test_project_yaml.py
tests/core/: test_browser_lock.py  test_bug_store.py  test_bug_store_resume.py  test_dedup.py  test_event_bus.py  test_run_paths.py  test_run_paths_resume.py  test_scenario_queue.py
tests/e2e/: jira_mock.py  smoke.sh
tests/e2e/fixtures/: canned_page.html
tests/runner/: test_claude_proc.py  test_event_log_tailer.py  test_tabs.py
tests/runner/fixtures/: stream_json_samples.jsonl
