[project]
name = "explorer"
version = "0.1.0"
description = "Long-running TUI test explorer using Claude Code subprocesses"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
explorer = "explorer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["explorer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
